2012-01-09 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/base-application.c (base_application_run):
	Add a debug message before entering the main loop.

2012-01-08 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/base-application.c:
	* src/nact/base-application.h
	(base_application_get_builder): Removed function.
	Implements BaseIUnique interface.

	* src/nact/base-window.c:
	* src/nact/base-window.h:
	Have a common builder at class level.
	Gtk toplevel and BaseWindow are initialized when instance is constructed.

	* src/nact/nact-application.c: Updated accordingly.

	* src/nact/base-iunique.c:
	* src/nact/base-iunique.h (base_iunique_init_with_name):
	Function renamed from base_iunique_init_name().
	* src/nact/base-builder.c:
	* src/nact/base-builder.h: Fix comments.

	* src/nact/nact-tree-view.c (nact_tree_view_get_type):
	Register the interface after the type so that the interface is able to
	require the type.

	A program to test a class which implements an interface, this same
	interface itself requiring the class...

	* src/test/test-iface2.c: New interface test program.

	* src/test/Makefile.am: Updated accordingly.

	Rather call parent_class::instance_constructed() method before executing
	the derived class one.

	* src/core/na-io-provider.c (instance_constructed):
	* src/core/na-pivot.c (instance_constructed):
	* src/nact/nact-assistant-export.c (instance_constructed):
	* src/nact/nact-main-window.c (instance_constructed):
	* src/nact/nact-tree-view.c (instance_constructed):
	* src/plugin-menu/nautilus-actions.c (instance_constructed):
	Call parent class on the beginning of the function.

	* src/nact/base-iunique.c:
	* src/nact/base-iunique.h: New BaseIUnique interface.

	* src/nact/Makefile.am: Updated accordingly.

2012-01-06 Pierre Wieser <pwieser@trychlos.org>

	* configure.ac: Now requires gtk-doc >= 1.16.

	* src/nact/base-application.c:
	* src/nact/base-application.h (base_application_run):
	Take argc, argv as function arguments.