@@ -1,5 +1,7 @@
 2012-01-09 Pierre Wieser <pwieser@trychlos.org>
 
+	* src/nact/base-application.h: Fix comments.
+
 	* src/nact/base-application.c (base_application_run):
 	Add a debug message before entering the main loop.
 
